src/assets/sass/modules/_layout-specific.scss
@use "../setup";

/* Setup and login panels - additional layout
   ========================================================================== */

/**
 * Column width and margins of setup panels.
 */

.txp-setup {
    max-width: setup.$setup-column;
    margin: 1em auto;

    // Column width of 'welcome' setup panel.

    .welcome & {
        max-width: 26em; // 338px / 13px
    }
}

/**
 * Column width and margins of login panels.
 */

.txp-login {
    max-width: 26em; // 338px / 13px
    margin: 3em auto 1em;
}

/**
 * Additional styling for 'view site' link on login panel.
 */

.login-view-site {
    position: relative;
    bottom: -0.5em;
    padding: 1em 0;
    overflow: hidden;
    border-top: 1px solid var(--clr-brdr);
    text-overflow: ellipsis;
}

/**
 * Welcome page `select` spans entire column width.
 */

.welcome select {
    width: 100%;
}

/* Content -> Categories panel - additional layout
   ========================================================================== */

/**
 * Extra margin below multi-edit widgets on categories page.
 */

#page-category .multi-edit {
    margin-bottom: 1em;
}

/* Content -> Write panel - additional layout
   ========================================================================== */

/**
 * View mode tabs on write area.
 *
 * Example HTML:
 *
 * <div id="view_modes">
 *     <ul>
 *         <li id="tab-text" class="active"><a>Text</a></li>
 *         <li id="tab-html"><a>HTML</a></li>
 *         <li id="tab-preview"><a>Preview</a></li>
 *     </ul>
 * </div>
 */

#view_modes {
    ul {
        margin: 0;
        padding: 0;
        border-bottom: 1px solid var(--clr-brdr);
        font-size: setup.$small-font-size;
        line-height: setup.$small-line-height;
    }

    li {
        display: inline-block;
    }

    a {
        display: block;
        position: relative;
        bottom: -1px;
        padding: 0.25em 1em;
        border: 1px solid var(--clr-brdr-lite);
        border-bottom-color: var(--clr-brdr);
        border-top-left-radius: 0.75em 2em;
        border-top-right-radius: 0.75em 2em;
        background-color: var(--clr-hilite-box);
        box-shadow: inset 0 -0.2em 0.4em hsl(48 52% 71% / 0.5),
            0 -0.1em 0.1em hsl(0 0% 0% / 0.1);
        color: var(--clr-text-btn);
        text-decoration: none;

        &:hover {
            border-color: var(--clr-brdr-dark);
            filter: brightness(1.05);
            color: var(--clr-text-btn-hover);
            text-decoration: none;
        }

        &:focus {
            border-color: var(--clr-focus);
            outline: 0;
        }
    }

    .active a {
        border-bottom-color: var(--clr-bkgd);
        background-color: var(--clr-bkgd);
        box-shadow: 0 -0.1em 0.1em hsl(0 0% 0% / 0.1);

        &:focus {
            border-color: var(--clr-focus);
        }
    }
}

/**
 * Custom font size/weight/colour for elements in write -> main content area.
 */

#main_content {
    .text {
        input {
            font-size: 1.2307692rem; // 16px / 13px
        }

        textarea {
            font-size: 1.2307692rem; // 16px / 13px
            line-height: 1.5; // 24px / 16px
        }

        .title input {
            width: 100%;
            font-weight: 700;
        }

        .body textarea {
            height: 48vh;
        }

        .excerpt textarea {
            height: 12vh;
        }
    }

    .author small {
        display: block;
        margin-top: -1em;
        color: var(--clr-text-demoted);
    }
}

/**
 * Reduce space above post now/expire now fields.
 */

.posted-now,
.expire-now {
    margin-top: 0;
}

/* Content -> Articles panel - additional layout
   ========================================================================== */

/**
 * Grey-out text for unpublished articles/non-modified dates in the list.
 */

.unpublished,
.not-modified {
    color: var(--clr-text-demoted);
}

/* Content -> Images panel - additional layout
   ========================================================================== */

.has-thumbnail a:focus {
    outline: 0;
}

.image-replace {
    margin-bottom: 1em;
}

.edit-alter-thumbnail {
    margin-bottom: 1.5em;
}

.edit-alter-thumbnail input {
    margin: 0;
    margin-inline-end: 0.3333333em;

    &:last-child {
        margin-inline-end: 0;
    }
}

.ui-button.thumbnail-swap-size {
    margin: 0;
    margin-inline-end: 0.3333333em;
}

.thumbnail-image form {
    display: inline-block;
    margin-top: 5px;
    vertical-align: top;
}

/* Content -> Files panel - additional layout
   ========================================================================== */

/**
 * Make sure form for selecting existing files is on a new line.
 */

.txp-control-panel .assign-existing-form {
    display: block;
}

/* Content -> Comments panel - additional layout
   ========================================================================== */

/**
 * Background highlight for spam comment/unmoderated comment rows in the list.
 */

.txp-list tbody tr {
    &.spam {
        background: var(--clr-error-bkgd);
    }

    &.moderate {
        background: var(--clr-warning-bkgd);
    }
}

/* Presentation -> all panels - additional layout
   ========================================================================== */

.presentation textarea.code {
    height: 64vh;
}

/* Presentation -> Forms panel - additional layout
   ========================================================================== */

#page-form .name {
    display: inline-block;
    margin: 1em 0 0;
    margin-inline-end: 1em;

    input {
        width: 14.4615385em; // 188px / 13px
    }
}

#page-form .type {
    display: inline-block;
    margin: 1em 0 0;
}

#page-form .txp-layout-4col-3span .txp-actions a {
    margin-top: 1.5em;
}

/* Admin -> Plugins panel - additional layout
   ========================================================================== */

.plugin-data {
    display: block;
}

tr {
    .manage span,
    .plugin-prefs {
        visibility: hidden;
    }
}

tr.active {
    .manage span,
    .plugin-prefs {
        visibility: visible;
    }
}

#preview-plugin,
#preview-help,
#preview-textpack {
    height: 16vh;
    overflow: auto;
    resize: vertical;
}

.edit-plugin-code textarea {
    height: 70vh;
}

